syntax = "proto3";

package vou.proto;

option go_package = "VOU-Server/proto/gen";

message AnswerQuestionRequest {
  int32 question_num = 1;
  int64 event_id = 2;
  string username = 3;
  string answer = 4;
}

message AnswerQuestionResponse {
  bool is_correct = 1;
  string correct_answer = 2;
}